Define basic functionality for this gem
Basic functionality includes:
  - `Say.say(message, type = nil, &block)`
  - `Say.say_with_block(header_message, footer_message: "Done")`
  - `Say.say_header(message = nil, **kwargs)`
  - `Say.say_item(message, **kwargs)`
  - `Say.say_footer(message = "Done", **kwargs)`
  - `Say.build_banner(message = nil, columns: MAX_COLUMNS)`
  - `Say.build_message(message, type: nil)`
  - `Say.do_say(*messages, silent: false)`

Update installation notes in README.
Update typical usage notes in README.
Add notes no how to view YARD docs to README.

Add exceptions for `@example` output line length to Rubocop's
Layout/LineLength cop.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -41,6 +41,10 @@ Layout/LineLength:
   Max: 80
   Exclude:
     - "say.gemspec"
+  AllowedPatterns:
+    # YARD doc `@example` output.
+    - !ruby/regexp /\A *#   \# => /
+    - !ruby/regexp /\A *#   =/
 
 Layout/MultilineMethodCallBraceLayout:
   EnforcedStyle: same_line
