Add script/test.rb for quick feature testing w/ Pry
Run test scripts from the Pry console with:

```
play script/test.rb
```

Update README to include these scripts + their test output. This will
help to keep the examples in the README up-to-date and relevant into
the future.

--- a/.reek.yml
+++ b/.reek.yml
@@ -4,7 +4,7 @@ directories:
       enabled: false
     UtilityFunction:
       enabled: false
-  "scripts":
+  "script":
     IrresponsibleModule:
       enabled: false
     UtilityFunction:
