Add script/playground.rb to .gitignore
This just gives me a script file for testing ideas that won't be added
to version control.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,8 @@ AllCops:
   DisplayCopNames: true
   DisplayStyleGuide: true
   ExtraDetails: true
+  Exclude:
+    - "script/playground.rb"
 
 Gemspec/DevelopmentDependencies:
   EnforcedStyle: gemspec # See: https://bundler.io/guides/creating_gem.html#testing-our-gem
