Customize Rubocop and Reek Styles
These Rubocop customizations are from my personal style-guide that I
just hadn't rolled into this gem yet.

- I prefer `ex` over `e` because single-character variable names are so
  much harder to grep for.
- `tap` is definitely functional because the returned value is usable
  and method chaining uses this result over the original.
  - etc...
- Not going to use OpenStruct anymore / in this gem. Now preferring
  Ruby 3.2's Data class (e.g. `Data.define(:x).new(1).x # => 1`)

The reek customizations are to:
- silence in-editor linter noise in script files entirely
- Remove unnecessary noise about UtilityFunction code smells that are
  actually just fine.

--- a/.reek.yml
+++ b/.reek.yml
@@ -1,11 +1,14 @@
+detectors:
+  UtilityFunction:
+    exclude:
+      - "/Say#(do_)?say.*/"
+
 directories:
   "test":
     IrresponsibleModule:
       enabled: false
     UtilityFunction:
       enabled: false
-  "script":
-    IrresponsibleModule:
-      enabled: false
-    UtilityFunction:
-      enabled: false
+
+exclude_paths:
+  - script
