--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,12 @@ AllCops:
   DisplayStyleGuide: true
   ExtraDetails: true
   Exclude:
+    # Rubocop Defaults
+    - "node_modules/**/*"
+    - "tmp/**/*"
+    - "vendor/**/*"
+    - ".git/**/*"
+    # Custom additions
     - "script/**/*"
 
 Gemspec/DevelopmentDependencies:
