Add to public API: `Say.progress` and `say_progress`
Use `Say.progress` to track long-running processing loops on a given
interval. (The default interval is `1`.)
- See the README for more details.

--- a/.reek.yml
+++ b/.reek.yml
@@ -1,6 +1,17 @@
 # See: https://github.com/troessner/reek#configuration-options
 
 detectors:
+  Attribute:
+    enabled: false
+  DuplicateMethodCall:
+    exclude:
+      - "self.test"
+  TooManyStatements:
+    exclude:
+      - "self.test"
+  UncommunicativeVariableName:
+    exclude:
+      - "self.test"
   UtilityFunction:
     exclude:
       - "/Say#(do_)?say.*/"
