Add Say::LJBanner for creating Left-justified Banners
This replaces the custom/buggy implementation from Say#banner with
a more robust solution. While building this out, I also realized that
this gem is begging for different banner types. Thus, the default banner
type is now self-identifying as a left-justified banner type. To come
would be center-justified and right-justified banner types.

Say::LJBanner now utilizes a Say::InterpolationTemplate as the basis,
which allows for easily customizing the banner style by either using
one of the baked-in interpolation template strings, or by accepting a
user-defined one on instance creation. This makes e.g. "hr"-style
banners (where no text is necessary) possible.

--- a/.reek.yml
+++ b/.reek.yml
@@ -1,14 +1,10 @@
+# See: https://github.com/troessner/reek#configuration-options
+
 detectors:
   UtilityFunction:
     exclude:
       - "/Say#(do_)?say.*/"
 
-directories:
-  "test":
-    IrresponsibleModule:
-      enabled: false
-    UtilityFunction:
-      enabled: false
-
 exclude_paths:
   - script
+  - test
