Update Rubocop: Style/TrailingCommaInHashLiteral style
Prefer having trailing commas for easier reordering/extension of
multi-line hashes/arrays.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -165,3 +165,8 @@ Style/StringLiterals:
 Style/StringLiteralsInInterpolation:
   EnforcedStyle: double_quotes
 
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInHashLiteral:
+  EnforcedStyleForMultiline: comma
