Add `Say.section` and `say_section`
Add `Say.section` and `say_section` for 3-line banners that really
visually split up output into major sections.

During this effort, the Say module grew enough to trip Rubocop's
Metrics/ModuleLength cop. For now, I've gotten around this by 
configuring the Metrics/ModuleLength cop to "CountAsOne": Array, 
Heredocs, and Method Calls. While I do think this configuration is a
a valid solution, I actually will be taking on module 
length/responsibilities in future work, as I want to start extracting 
some of the logic into separate objects--much in the same was as I did 
for the Say.banner method and the Say::LJBanner object.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -88,6 +88,12 @@ Metrics/ClassLength:
   Exclude:
     - "test/**/*"
 
+Metrics/ModuleLength:
+  CountAsOne:
+    - array
+    - heredoc
+    - method_call
+
 Naming/MethodParameterName:
   AllowedNames:
     - a
