Integrate with my new gemwork gem
The new gemwork gem is my attempt at a commonized gem framework. This
includes e.g. style guide settings as well as rake files for running
them, etc. Gemwork is just getting started.

Update RuboCop config to source from gemwork gem instead of the now
no-longer existing pdobb-style gem.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,2 +1,11 @@
+# Load Rubocop plugins.
+require:
+  - rubocop-rake
+  - rubocop-minitest
+  - rubocop-performance
+
 inherit_gem:
-  pdobb-style: .rubocop.yml
+  gemwork: lib/rubocop/.rubocop.yml
+
+AllCops:
+  TargetRubyVersion: 2.7
