Gemwork update v0.5.0: New Rubocop cops added
Fix up new offenses after adding new Rubocop cops.

Update all gems.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,7 +5,7 @@ require:
   - rubocop-performance
 
 inherit_gem:
-  gemwork: lib/rubocop/.rubocop.yml
+  gemwork: lib/rubocop/.rubocop-gems.yml
 
 AllCops:
   TargetRubyVersion: 2.7
