Update gems + misc internal code style updates
After updating gems, had to correct for Rubocop offenses coming from my
latest conventions (in gemwork). To do this, I just ran `bundle exec
rubocop --autocorrect-all --disable-uncorrectable`
- Also had to disable Minitest/MultipleAssertions... still need to
  disable this one via gemwork. I'm not worried about assertion counts
  in tests.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
 # Load Rubocop plugins.
-require:
+plugins:
   - rubocop-rake
   - rubocop-minitest
   - rubocop-performance
@@ -9,3 +9,6 @@ inherit_gem:
 
 AllCops:
   TargetRubyVersion: 3.2
+
+Minitest/MultipleAssertions:
+  Enabled: false
