Add `Say.hr` and `say_hr` for: horizontal rules
It can be handy to output a horizontal rule (a thin line with padding
above/below) during scripts processing.

See README for usage.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,3 +9,16 @@ inherit_gem:
 
 AllCops:
   TargetRubyVersion: 3.1
+
+Minitest/MultipleAssertions:
+  Enabled: false
+
+Minitest/EmptyLineBeforeAssertionMethods:
+  Enabled: false
+
+Style/FormatStringToken:
+  # Prefer "%{my_template_value}" # <- Same style as is used in YAML
+  # Over:
+  # - "%<my_template_value>"
+  # - "%s"
+  EnforcedStyle: template
