Update gems + bump internal usage to Ruby 3.4.7
Set .tool-versions to Ruby 3.4.7 since I'm using mise now.

Notable gem bump: gemwork -- which contains my styles.
- Fix Rubocop offenses based on latest styles.
- Set a project-specific Max LineLength of 100 (vs 80).
  - I'll probably set this to 100 across the board soon, but, in the
    mean time, it makes sense here because there are many 80-character
    line output examples that must be this long. So this reduces a bunch
    of (but not all of) the Layout/LineLength cop disablings.

Also: Autocorrect prettier styles violations

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,11 +10,18 @@ inherit_gem:
 AllCops:
   TargetRubyVersion: 3.2
 
+Layout/LineLength:
+  Max: 100
+
 Minitest/MultipleAssertions:
   Enabled: false
 
 Minitest/EmptyLineBeforeAssertionMethods:
   Enabled: false
+
+Naming/BlockParameterName:
+  Exclude:
+    - say.gemspec
 
 Style/FormatStringToken:
   # Prefer "%{my_template_value}" # <- Same style as is used in YAML
